--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,5 @@
         </dependency>
     </dependencies>
     
-    <name>DB_Management</name>
+    <name>DB_Management_System</name>
 </project>
